var arrayObject = [];                        $.ajax({                                   url: "/ImagesAndWord",                                   type: 'GET',                                   crossDomain: true,                                   async: true,                                   cache: false,                                   contentType: false,                                   processData: false,                                   success: function (data) {                                      var theLength = data.length;                                      var arrayCounter = 0;                                      for(data.length){                                         arrayCounter++;                                         arrayObject.push();                                         if(theLength == ){                                            callingAnimationFunction();                                         }                                      }                                   },                                   error: function(data){                                       alert("Cant Connect to Server! /n Something is wrong!");                                   }                              });

--- a/public/stylesheet/admin.css
+++ b/public/stylesheet/admin.css
@@ -11,6 +11,7 @@
 	padding-right: 0px;
 	padding-left: 0px;
 	padding-bottom: 0px;
+	background-color: #203640;
 }
 
 #copyright {
@@ -66,3 +67,14 @@
     background-color: #203640;
     border: none;
 }
+
+textarea {
+	padding: 10px;
+	border-radius: 5px;
+	border: 1px solid #c0d9da;
+	margin-bottom: 10px;
+	width: 70%;
+	margin-left: 20px;
+	height: 70px;
+}
+
