--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -31,12 +31,47 @@
 		 	  	  	</form>
 		 	  	  </div>
 		 	  	  <div class="formDiv">
-		 	  	  	<form action="">
+		 	  	  	<form action="" method="post">
+		 	  	  		<label for="">About Mami</label><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
 		 	  	  		<button>submit</button>
 		 	  	  	</form>
 		 	  	  </div>
 		 	  	  <div class="formDiv">
-		 	  	  	<form action="">
+		 	  	  	<form action="" class="">
+		 	  	  		<label for="">Vision/partnershipform</label><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+
 		 	  	  		<button>submit</button>
 		 	  	  	</form>
 		 	  	  </div>
