updating the app

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -719,8 +719,9 @@
                            $('#freedom').hide();
                       }
                 });
-
-                 var arrayObject = [];
+            });
+ 
+             /*    var arrayObject = [];
                        $.ajax({
                                   url: "/ImagesAndWord",
                                   type: 'GET',
@@ -760,7 +761,7 @@
                      }
                  }, 3000);
             }
-            
+            */
          </script>
 	</body>
 </html>
