--- a/public/stylesheet/homepage.css
+++ b/public/stylesheet/homepage.css
@@ -321,6 +321,14 @@
     border: 1px solid cadetblue;
 }
 
+.smallerContact {
+	width: 95%;
+	margin-left: 2.5%;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	background-image: url('/images/requestimage.jpg');
+}
+
 .triggerFlex div {
 	padding-top: 20px;
 	width: 45%;
@@ -603,4 +611,57 @@
 .downloadGroupOne p {
 	color: white;
 	margin-left: 10%;
+}
+
+.lastForm {
+   width: 95%;
+   margin-left: 2.5%;
+   margin-top: 10px;
+   border: 1px solid #eeeeee;
+   padding-top: 5px;
+   padding-bottom: 10px;
+   border-radius: 3px;
+   margin-bottom: 10px;
+   background-color: transparent;
+}
+
+.lastForm p {
+	padding: 10px;
+	padding-top: 0px;
+	color: white;
+}
+
+.lastForm input, .lastForm textarea, .lastForm label {
+	width: 95%;
+	margin-bottom: 7px;
+	border-radius: 3px;
+	padding: 5px;
+	margin-left: 2.5%;
+	border: 1px solid #eeeeee;
+	background-color: transparent;
+	color: white;
+}
+
+.lastForm textarea {
+	height: 150px;
+}
+
+.lastForm button {
+	background-color: #203640;
+	color: white;
+	padding: 1px;
+	padding-right: 10px;
+	padding-left: 10px;
+	border: 1px solid orange;
+	margin-bottom: 10px;
+	border-radius: 5px;
+	margin-left: 3%;
+}
+
+.lastForm label {
+	border: none;
+	font-weight: bold;
+	text-align: center;
+	margin-bottom: 0px;
+	padding-bottom: 0px;
 }
