--- a/public/stylesheet/homepage1.css
+++ b/public/stylesheet/homepage1.css
@@ -126,11 +126,13 @@
    padding-bottom: 10px;
    border-radius: 3px;
    margin-bottom: 10px;
+   background-color: transparent;
 }
 
 .lastForm p {
 	padding: 10px;
 	padding-top: 0px;
+	color: white;
 }
 
 .lastForm input, .lastForm textarea, .lastForm label {
@@ -140,6 +142,8 @@
 	padding: 5px;
 	margin-left: 2.5%;
 	border: 1px solid #eeeeee;
+	background-color: transparent;
+	color: white;
 }
 
 .lastForm textarea {
