--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -480,6 +480,7 @@
 
            <div class="downloadMessagesMobile">
                 <form action="/" method="GET" class="mobileForm">
+                      <h4>Download Pastors Messages</h4>
                       <input type="text" value="search for messages">
                       <button id="displayAvailableForm">See Available Messages</button>
                 </form>
