--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -393,7 +393,7 @@
                <div class="navigationRightSide" style="display: none;">
                	    <ul>
                	    	<li><a href="/livestream">LiveStream</a></li>
-               	    	<li><a href="/admin">Admin</a></li>
+               	    	<li><a href="/adminAuthentication">Admin</a></li>
                	    	<li>About MAMI</li>
                	    	<li>PartnerShip</li>
                	    	<li>Vision</li>
