--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -24,75 +24,121 @@
 		 	  </div>
 
 		 	  <div class="col-sm-9 mainBody">
-		 	  	  <button id="firstButton">admin page</button>
-		 	  	  <div class="formDiv">
-		 	  	  	<form action="">
-		 	  	  	    <button>submit</button>	
-		 	  	  	</form>
-		 	  	  </div>
-		 	  	  <div class="formDiv">
-		 	  	  	<form action="" method="post">
-		 	  	  		<label for="">About Mami</label><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<button>submit</button>
-		 	  	  	</form>
-		 	  	  </div>
-		 	  	  <div class="formDiv">
-		 	  	  	<form action="" class="">
-		 	  	  		<label for="">Vision/partnershipform</label><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
-		 	  	  		<textarea name="" class="aboutMami"></textarea><br>
+		 	  	    <button id="firstButton">admin page</button>
+		 	  	  	<div class="coverForSubSections">
+		 	  	  		<form action="" method="post">
+		 	  	  		      <label for="" class="landingSectionClass">Landing Section</label><br>
+		 	  	  		      <input type="text" class="landingSection" value="mami"><br>
+		 	  	  		      <input type="text" class="landingSection" value="Enlighteen Citizens of Gods Kingdom"><br>
+		 	  	  		      <button>submit</button>
+                        </form>
+		 	  	  	</div>
+		 	  	  		<hr class="horizontalRule">
+		 	  	    <div class="coverForSubSections">
+		 	  	    	 <form action="" method="POST">
+		 	  	  		      <label for="" class="landingSectionClass">Replace Video Content</label>
+		 	  	  		      <input type="file" class="landingSection">
+		 	  	  		      <button>submit</button>
+		 	  	  	     </form>
+		 	  	    </div>
+		 	  	  	
+		 	  	  	<br>
+		 	  	  	<div class="coverForSubSections">
+		 	  	  		 <p style="margin-left: 25%; font-weight: bold;">Embed Video For LiveStreaming Section!</p><br>
+		 	  	  		 <input type="file" class="landingSection">
+		 	  	  		 <button>Submit</button>
+		 	  	  	</div>
+		 	  	  	<br>
 
+		 	  	  	<form action="" method="post" id="ministryPlatForm">
+		 	  	  		<div class="coverForSubSections">
+		 	  	  			<input type="text" value="Freedom ON AIR" class="landingSection"><br>
+		 	  	  		    <textarea name="" class="aboutMami">Freedom on Air is our Radio and Video platform through which we take the gospel of our Lord Jesus into the homes of millions and hundreds of thousands that we naturally may not have been privileged to see or meet physically.This platform empowers MAMI to reach more souls with the message of freedom.</textarea><br>
+
+		 	  	  		<input type="text" class="landingSection" value="TV, RADIO, FACEBOOK, YOUTUBE."><br>
+		 	  	  		<button>submit</button><br>
+		 	  	  		</div><br><br>
+		 	  	  		<div class="coverForSubSections">
+		 	  	  			<input type="text" class="landingSection" value="LOVE CHOICES AND OTHER BEAUTIFUL WORDS"><br>
+		 	  	  		<textarea name="" class="aboutMami">A passion in our heart is the establishment of God’s Children in Godly relationships that will eventually translate to model homes. It’s on the strength of this platform that we minister to singles and equip them with sound knowledge of God’s Word for choices, working out relationships and knowing when to walk out and start over if need be.
+                                 We believe happily ever after begins with choices made from the start of dating. We hope to see you in one of our meetings.</textarea><br>
+                                 <button>submit</button><br>
+		 	  	  		</div><br>
+		 	  	  		<div class="coverForSubSections">
+		 	  	  			<input type="text" class="landingSection" value="MINISTERS IN TRAINING (MIT)"><br>
+		 	  	  		    <textarea name="" class="aboutMami">A core conviction in our hearts born out of understanding of God’s Word is that it is God’s responsibility to call a man but the man must endeavour to fulfil his call and ministry. MIT is a mentoring platform for Pastors, those in HELPS MINISTRY, ITINERANT TEACHER to help fulfilling the call of God and to minimize casualties and mistakes in the fulfilment of destiny.
+                                 The platform holds its meetings 6 times in a year. Venues are communicated to registered members of MIT. Please feel free to register here.</textarea><br>
+                                 <button>submit</button><br>
+		 	  	  		</div><br>
+		 	  	  		<div class="coverForSubSections">
+		 	  	  			 <input type="text" class="landingSection" value="FREEDOM MINISTRY ACADEMY (FMA)"><br>
+		 	  	  		     <textarea name="" class="aboutMami">A very crucial part of preparation for ministry is a proper, structured, disciplined environment of learning where teaching, training and equipping can be done. FMA is God ordained for this purpose. It is a once in a year ACADEMY that runs for 7 weekends with proper graduation and certification.
+                                 It is an intense boot camp where doctrines are set forth and wisdom is poured out.
+                                 FMA usually provides the door way into MIT. Graduates are encouraged to proceed to Ministers in Training for further mentorship and establishment.</textarea><br>
+                                 <button>submit</button><br>
+		 	  	  		</div><br>
+		 	  	  		<div class="coverForSubSections">
+		 	  	  			<input type="text" class="landingSection" value="PUBLISHING ARM (FREEDOM CHRONICLES)">
+		 	  	  		    <textarea name="" class="aboutMami">This is the publishing arm of MAMI. We are saddled with an awesome responsibility to extend the message of freedom that Christ purchased for us through the printed media.
+                                 We do not just publish; we see to the distribution of these power packed materials to the nations.
+                                 Most of our publications are available in hard and soft copies for easier distribution. 
+                                 You can subscribe for our magazine</textarea><br>
+                                 <br>
+                            <button>submit</button><br>
+		 	  	  		</div><br>
+		 	  	  		
+		 	  	  		<div class="coverForSubSections">
+		 	  	  			 <input type="text" class="landingSection" value="REVIVE MINISTRY CAMP (RMC)"><br>
+		 	  	  		<textarea name="" class="aboutMami">
+		 	  	  			Revive Ministry Camp is our yearly camp meetings with ministry in focus. It is usually a time of deep encounters with God; an unusual season of birthing forth God’s will on earth through intense teachings, the labour room of prayers, powerful impartation of the Spirit and a place of destiny.
+                                 It’s usually a place of refuelling, where fresh oil is injected into wheels of ministry. Make plans to attend this year’s RMC.
+		 	  	  		</textarea><br>
 		 	  	  		<button>submit</button>
-		 	  	  	</form>
-		 	  	  </div>
-		 	  	  <div class="formDiv">
-		 	  	  	<form action="">
-		 	  	  		<button>submit</button>
-		 	  	  	</form>
-		 	  	  </div>
-		 	  	  <div class="formDiv">
-		 	  	  	<form action="">
-		 	  	  		<button>submit</button>
-		 	  	  	</form>
-		 	  	  </div>
-		 	  	  <div class="formDiv">
-		 	  	  	 <form action="">
-		 	  	  	 	 <button>submit</button>
-		 	  	  	 </form>
-		 	  	  </div>
-		 	  </div>
-		 	</div>
-		 	
+		 	  	  		</div><br>
+		 	  	  	</form><br>
+		 	  	  	<hr>
+		 	  	  	<div class="coverForSubSections">
+		 	  	  		<form action="" method="post" action="" id="visionStatement">
+		 	  	  			<input type="text" class="landingSection" value="PARTNERSHIP WITH MAMI"><br>
+		 	  	  			<input type="text" value="Who is a MAMI partner" class="landingSection"><br>
+		 	  	  			<textarea name="" class="aboutMami">A MAMI partner is someone that partners with MAMI financially in other that MAMI will be able to perform her assignment of taking the Gospel to the ends of the earth.
+
+A MAMI partner is also someone thats is committed to praying for MAMMI and Pastor Muyiwa, in that the ministry of Christ prospers in his hands as God ordained it.
+
+If you are not a partner already clic on the partnership button below and fill the form that follows</textarea><br>
+<button>submit</button>
+		 	  	  		</form>
+		 	  	  	</div>
+<hr>
+<div class="coverForSubSections">
+	<form action="">
+		  <input type="file" class="landingSection">
+	      <textarea name="" class="aboutMami">–Taking the message of FREEDOM to the nations, stressing with simplicity and clarity the liberty of believers in Christ and raising other freedom agents across the globe.</textarea>
+	      <input type="text" class="landingSection" value="online payment">
+	      <input type="text" class="landingSection" value="paypal">
+	      <input type="text" class="landingSection" value="Skrill"><br>
+	      <button>submit</button>
+	</form>
+</div><br>
+
+	<div class="coverForSubSections">
+		<h4 id="adverForPlasticSection">Advert For Plastic Section</h4>
+		<form action="">
+		   <p class="changePicture">First Picture</p>
+		   <input type="file" class="landingSection">
+		   <p class="changePicture">Second Picture</p>
+		   <input type="file" class="landingSection">
+		   <p class="changePicture">Third Picture</p>
+		   <input type="file" class="landingSection">
+		   <p class="changePicture">Fouth Picture</p>
+		   <input type="file" class="landingSection">
+		   <button>submit</button>
+	    </form>
+	</div><br>
+</div>
+</div>
+</div>
+</div>
 		 	<p id="copyright">copyright mami 2018</p>
 		 </div>
 		 <script>
