--- a/views/livestream.ejs
+++ b/views/livestream.ejs
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="/javajcript/jquery-3.2.1.min(first).js"></script>
+        <script src="/javascript/jquery-3.2.1.min(first).js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <base href="http://127.0.0.1:5000">
         <link rel="stylesheet" href="/stylesheet/livestream.css">
+         <link rel="stylesheet" href="/stylesheet/livestream1.css">
         <base href="http://127.0.0.1:5000">
 	</head>
 	<body>
